# pc

./: .clang-format  CMakeLists.txt  README.md
lab1/: CMakeLists.txt  ChunkVector.h  Gzip.h  Timer.h  WaitChildProcesses.h
lab1/extractFiles/: main.cpp
lab1/makeArchive/: main.cpp
lab2/: CMakeLists.txt
lab2/gauss/: Gauss.cpp  Gauss.h  Parallel.h  Pixel.h  Pixels.h  ViewMain.cpp  main.cpp
lab2/life/: GenerateMode.cpp  GenerateMode.h  Life.cpp  Life.h  StepMode.h  main.cpp
lab3/: CMakeLists.txt  Characters.h  CharactersBase.h  Simulation.h  bank.cpp  bank.h  main.cpp
lab3/bank/: Bank.h  Characters.h  Simulation.h  main.cpp
lab3/bank/tests/: Bank_tests.cpp
lab3/tests/: bank_tests.cpp
lab3/warehouse/: Auditor.h  Client.h  Supplier.h  Warehouse.h  main.cpp
lab4/: CMakeLists.txt  audio_player.cpp  input.txt  main.cpp  seven-nation-army.txt
lab4/src/: Chord.h  ChordsGenerator.h  Device.h  ErrorCategory.h  Parser.h  Player.h  SineWaveGenerator.h
lab4/src/waves/: Epsilon.h  PulseWaveGenerator.h  SawtoothWaveGenerator.h  SineWaveGenerator.h  TriangleWaveGenerator.h  WaveGenerator.h
lab5/: CMakeLists.txt  main.cpp
lab5/src/: Client.h  PacketType.h  Server.h  pch.h
lab5/src/TVReceiver/: AudioPlayer.h  Client.h  ClientMode.h  TVReceiver.cpp  TVReceiver.h
lab5/src/TVStation/: Microphone.h  Server.h  ServerMode.h  TVStation.cpp  TVStation.h  VideoCamera.h
lab6/: CMakeLists.txt  main.cpp
lab6/atomicMax/: AtomicMax.h
lab6/stopToken/: StopToken.h
lab6/tests/: AtomicMax_tests.cpp  StopToken_tests.cpp  ThreadPoolLockBased_tests.cpp  ThreadPoolLockFree_tests.cpp  TicketOffice_tests.cpp
lab6/threadPool/: ThreadPoolLockBased.h  ThreadPoolLockFree.h  main.cpp
lab6/ticketOffice/: TicketOffice.h
lab7/: CMakeLists.txt
lab7/asyncFile/: AsyncFile.h  CopyFile.h  Dispatcher.h  OpenAsyncFile.h  Task.h  main.cpp
lab7/generator/: Generator.h  main.cpp
lab7/myTask/: MyTask.h
lab7/simpleAwaiter/: main.cpp
lab7/tests/: AsyncFile-tests.cpp  Generator-tests.cpp  MyTask-tests.cpp
lab8/: CMakeLists.txt  Model.h  Random.h  main.cpp
lab8/bitonicSort/: BitonicSorter.h  main.cpp
lab8/gauss/: Gauss.h  ViewMain.cpp
lab8/glfwWindow/: BaseWindow.cpp  GLFWInitializer.cpp
lab8/gpuRunner/: GPURunner.h
lab8/matrix/: Matrix3.h  Matrix4.h
lab8/median/: Median.h  ViewMain.cpp
lab8/motion/: Motion.h  ViewMain.cpp
lab8/particleSystem/: Model.h  main.cpp
lab8/particleSystem/window/: Window.cpp  Window.h
lab8/radial/: GaussianKernel.h  Radial.h  ViewMain.cpp
lab8/vector/: Vector2.h  Vector3.h  Vector4.h  VectorMath.h
lab8/window/: Window.cpp  Window.h
lib/coutBuffer/: CoutBufferFixture.h
lib/osWrappers/: FileDesc.h  Socket.h
lib/timer/: Timer.h
